# fastrpc

./: .gitignore  README.md  configure.ac  gitcompile
.github/workflows/: abi-check.yml  abi-compat.yml  build_linux_gnu.yml
Docs/: conf_guideline.md
Docs/schemas/: fastrpc-config-schema.yaml
files/: 60-fastrpc.rules  Makefile.am  adsprpcd.service  adsprpcd.service.in  adsprpcd_audiopd.service  adsprpcd_audiopd.service.in  cdsp1rpcd.service  cdsp1rpcd.service.in  cdsprpcd.service  cdsprpcd.service.in  fastrpc.conf  gdsp0rpcd.service  gdsp0rpcd.service.in  gdsp1rpcd.service  gdsp1rpcd.service.in  sdsprpcd.service  sdsprpcd.service.in
inc/: apps_std_internal.h  fastrpc_config_parser.h  fastrpc_internal.h  remote.h
src/: Makefile.am  apps_mem_imp.c  apps_std_imp.c  dsprpcd.c  fastrpc_apps_user.c  fastrpc_config_parser.c  fastrpc_mem.c  listener_android.c  log_config.c  mod_table.c
test/: Makefile.am  dsp_check.c  dsp_check_doc.md
test/src/calculator/: README.md  calculator.idl
test/src/calculator/apps/src/: calculator_test.c
test/src/calculator/hexagon/src/: calculator_imp.c
test/src/calculator/inc/: calculator_test.h
